--- a/tech_share_http/index.html
+++ b/tech_share_http/index.html
@@ -17,5 +17,7 @@
 <h1>HTTP技术分享</h1>
 <a href="h5.html" target="_blank">Html5版</a>
 <a href="swf.html" target="_blank">Flash版</a>
+<hr />
+<a href="softs.zip">相关工具</a>
 </body>
 </html>
